--- a/src/pages/jackrunGame/gameJackrun/GameJackrun.scss
+++ b/src/pages/jackrunGame/gameJackrun/GameJackrun.scss
@@ -4,7 +4,7 @@
         grid-template-columns: repeat(5, 1fr);
         grid-template-rows: repeat(3, 1fr);
         grid-column-gap: 30px;
-        grid-row-gap: 71px;
+        grid-row-gap: 0px;
     }
     &__game{
         grid-area: 1 / 1 / 3 / 4;
@@ -15,6 +15,7 @@
         border-radius: 30px;
         padding: 20px;
         &Activity{
+            overflow: hidden;
             width: 660px;
             height: 260px;
             background: #000000;
@@ -39,9 +40,12 @@
                 margin-top: 5px;
             }
             &Roll{
+                position: relative;
                 margin-top: 36px;
+                margin-left: 11px;
                 display: flex;
                 justify-content: space-between;
+                min-width: 770px;
                 &User{
                     width: 70px;
                     height: 70px;
@@ -155,11 +159,14 @@
         }
     }
     &__bid{
-        position: relative;
-        background-image: url(../../../assets/img/jackrunImg/bidBg.png);
-        width: 469px;
-        height: 194px;
-        padding: 20px 20px;
+        grid-area: 1 / 4 / 3 / 6; 
+        &Info{
+            position: relative;
+            background-image: url(../../../assets/img/jackrunImg/bidBg.png);
+            width: 469px;
+            height: 194px;
+            padding: 20px 20px;
+        }
         &Wrapper{
             position: absolute;
             top: 0px;
@@ -231,6 +238,224 @@
                 font-size: 20px;
                 color: #FFFFFF;
                 margin-top: 10px;
+            }
+        }
+        &Main{
+            position: relative;
+            width: 470px;
+            height: 194px;
+            background: #201E1E;
+            box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.5);
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            padding: 20px;
+            margin-top: 20px;
+            &Title{
+                font-family: OxaniumMedium;
+                font-size: 16px;
+                color: #BABABA;
+            }
+            &Count{
+                font-family: OxaniumBold;
+                font-size: 16px;
+                color: #FFFFFF;
+                &::before{
+                    content: url(../../../assets/icon/jackrun/money.png);
+                    display: inline-block;
+                    vertical-align: middle;
+                    margin-right: 10px;
+                }
+            }
+            &Percent{
+                font-family: OxaniumBold;
+                font-size: 16px;
+                color: #FFFFFF;
+                &::before{
+                    content: url(../../../assets/icon/jackrun/percent.png);
+                    display: inline-block;
+                    vertical-align: middle;
+                    margin-right: 10px;
+                }
+            }
+            &CountWrapper{
+                width: 430px;
+                height: 40px;
+                background: #4A484A;
+                border: 1px solid #BABABA;
+                border-radius: 100px;
+                padding: 6px 20px;
+            }
+            &PercentWrapper{
+                width: 430px;
+                height: 40px;
+                background: #4A484A;
+                border: 1px solid #BABABA;
+                border-radius: 100px;
+                padding: 6px 20px;
+            }
+            &Button{
+                position: absolute;
+                cursor: pointer;
+                padding: 17px 21px;
+                width: 180px;
+                height: 53px;
+                font-family: OxaniumMedium;
+                font-size: 16px;
+                color: #FFFFFF;
+                background: linear-gradient(90deg, #FF5A3A 0%, #E1231C 100%);
+                border-radius: 100px;
+                border-style: none;
+                outline: 10px solid #141010;
+                outline-offset: 0px;
+                left: 146px;
+                bottom: -20px;
+                &:hover{
+                    box-shadow: inset 0px 0px 15px rgba(0,0,0,0.5);
+                }
+            }
+        }
+    }
+    &__inventory{
+        grid-area: 3 / 1 / 4 / 6;
+        width: 1200px;
+        height: 218px;
+        background: #201E1E;
+        box-shadow: 4px 4px 10px #00FF38;
+        border-radius: 30px;
+        padding: 20px;
+        margin-top: 70px;
+        &Wrapper{
+            display: flex;
+            justify-content: space-around;
+        }
+        &Title{
+            font-family: OxaniumXBold;
+            font-size: 20px;
+            color: #FFFFFF;
+            grid-area: 1 / 1 / 2 / 3;
+        }
+        &Activity{
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(2, 1fr);
+            grid-column-gap: 10px;
+            grid-row-gap: 15px; 
+            width: 270px;
+            height: 140px;
+            margin-top: 13px;
+            &Total{
+                width: 130px;
+                height: 68px;
+                background: rgba(74, 72, 74, 0.5);
+                border: 1px solid #00FF38;
+                border-radius: 10px;
+                padding: 15px 10px;
+                grid-area: 2 / 1 / 3 / 2;
+                &Balance{
+                font-family: OxaniumXBold;
+                font-size: 16px;
+                color: #FFFFFF;
+                }
+                &Descr{
+                    font-family: OxaniumMedium;
+                    font-size: 9px;
+                    color: #FFFFFF;
+                    margin-top: 10px;
+                }
+            }
+            &Selected{
+                width: 130px;
+                height: 68px;
+                background: rgba(74, 72, 74, 0.5);
+                border: 1px solid #FF4343;
+                border-radius: 10px;
+                padding: 15px 10px;
+                grid-area: 2 / 2 / 3 / 3;
+            }
+            &Market{
+                width: 130px;
+                height: 53px;
+                background: linear-gradient(90deg, #00811C 0%, #00D72F 100%);
+                border-radius: 10px;
+                border-style: none;
+                grid-area: 3 / 1 / 4 / 2;
+                &:hover{
+                    box-shadow: inset 0px 0px 20px rgba(0,0,0,0.5);
+                }
+            }
+            &Take{
+                width: 130px;
+                height: 53px;
+                background: linear-gradient(90deg, #FF5A3A 0%, #E1231C 100%);
+                border-radius: 10px;
+                border-style: none;
+                grid-area: 3 / 2 / 4 / 3;
+                &:hover{
+                    box-shadow: inset 0px 0px 20px rgba(0,0,0,0.5);
+                }
+            }
+        }
+        &Items{
+            display: flex;
+            margin-left: 10px;
+        }
+        &Item{
+            width: 140px;
+            height: 176px;
+            &Main{
+                width: 140px;
+                height: 115px;
+                background: rgba(74, 72, 74, 0.5);
+                border: 1px solid #FF4343;
+                border-radius: 10px;
+                padding: 32px 37px;
+            }
+            &Add{
+                width: 30px;
+                height: 30px;
+                background: #BABABA;
+                border-radius: 100%;
+                padding: 10px;
+                margin: 0 auto;
+                &:hover{
+                    background: #dbdbdb;
+                }
+                &Icon{
+                    height: 10px;
+                    width: 10px;
+                    background-image: url(../../../assets/icon/crushGame/add.png);
+                    margin: 0 auto;
+                }
+            }
+            &Descr{
+                font-family: OxaniumSBold;
+                font-size: 9px;
+                color: #BABABA;
+                margin-top: 10px;
+            }
+            &Button{
+                width: 140px;
+                height: 53px;
+                background: rgba(74, 72, 74, 0.5);
+                border-radius: 10px;
+                padding: 13px 25px;
+                margin-top: 8px;
+                &:hover{
+                    background: rgba(119, 116, 119, 0.5);
+                }
+            }
+            &Title{
+                font-family: OxaniumSBold;
+                font-size: 9px;
+                color: #BABABA;
+            }
+            &Cost{
+                font-family: OxaniumSBold;
+                font-size: 9px;
+                color: #BABABA;
+                text-align: center;
+                margin-top: 5px;
             }
         }
     }
