--- a/src/pages/userCab/market/Market.scss
+++ b/src/pages/userCab/market/Market.scss
@@ -1,7 +1,11 @@
 .market{
-
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    grid-column-gap: 51px;
+    grid-row-gap: 26px; 
     &__changer{
-
+        grid-area: 1 / 1 / 3 / 2;
         &Item{
             cursor: pointer;
             display: flex;
@@ -52,6 +56,156 @@
                 width: 22px;
                 height: 22px;
                 margin-right: 20px;
+            }
+        }
+    }
+    &__sale{
+        grid-area: 3 / 1 / 5 / 2;
+        &Title{
+            font-family: OxaniumMedium;
+            font-size: 10px;
+            color: #FFFFFF;
+        }
+        &Skin{
+            margin-top: 12px;
+            height: 50px;
+            width: 270px;
+            background: #2F2C2C;
+            border: 1px dashed #FFFFFF;
+            border-radius: 12px;
+            padding: 18px;
+            display: flex;
+            justify-content: space-between;
+            &Descr{
+                font-family: OxaniumMedium;
+                font-size: 10px;
+                color: #FFFFFF;
+            }
+            &Count{
+                font-family: OxaniumBold;
+                font-size: 10px;
+                color: #FFFFFF;
+            }
+        }
+        &Balance{
+            padding: 18px 17px;
+            height: 68px;
+            width: 270px;
+            background: #2F2C2C;
+            border: 1px dashed #FFFFFF;
+            border-radius: 12px;
+            margin-top: 8px;
+            &Descr{
+                font-family: OxaniumMedium;
+                font-size: 13px;
+                color: #FFFFFF;
+                margin-top: 2px;
+            }
+            &Count{
+                font-family: OxaniumBold;
+                font-size: 13px;
+                color: #FFFFFF;
+            }
+        }
+        &Button{
+            margin-top: 14px;
+            display: flex;
+            justify-content: flex-start;
+            gap: 80px;
+            height: 53px;
+            width: 270px;
+            background: linear-gradient(90deg, #FE573A 0%, #E2271E 100%);
+            border-radius: 100px;
+            padding: 18px;
+            &:hover{
+                box-shadow: inset 0px 0px 15px rgba(0,0,0,0.5);
+            }
+            &Descr{
+                font-family: OxaniumSBold;
+                font-size: 16px;
+                color: #FFFFFF;
+            }
+        }
+    }
+    &__skins{
+        grid-area: 1 / 2 / 5 / 6;
+        &Header{
+            display: flex;
+            justify-content: flex-start;
+            gap: 1px;
+            // width: 870px;
+            // height: 50px;
+            &Search{
+                padding: 17px 44px;
+                width: 398px;
+                height: 50px;
+                background: #2F2C2C;
+                border-top-left-radius: 12px;
+                border-bottom-left-radius: 12px;
+                border-style: none;
+                font-family: Oxanium;
+                font-size: 13px;
+                color: #FFFFFF;
+                background-image: url(../../../assets/img/market/search.png);
+                background-position: 16px 17px;
+                background-repeat: no-repeat;
+                &:focus{
+                    outline: none;
+                }
+            }
+            &Price{
+                cursor: pointer;
+                display: flex;
+                justify-content: space-between;
+                width: 160px;
+                height: 50px;
+                background: #2F2C2C;
+                padding: 17px 16px;
+                font-family: Oxanium;
+                font-size: 13px;
+                color: #FFFFFF;
+            }
+            &Count{
+                cursor: pointer;
+                width: 64px;
+                height: 50px;
+                background: #2F2C2C;
+                font-family: OxaniumBold;
+                font-size: 12px;
+                padding: 20px 16px;
+                color: #FFFFFF;
+            }
+            &Setting{
+                cursor: pointer;
+                padding: 16px;
+                width: 50px;
+                height: 50px;
+                background: #2F2C2C;
+                border-top-right-radius: 12px;
+                border-bottom-right-radius: 12px;
+                & img{
+                    &:hover{
+                        opacity: 0.5;
+                    }
+                }
+                
+            }
+            
+        }
+        &Content{
+            max-width: 870px;
+            max-height: 576px;
+            display: flex;
+            justify-content: flex-start;
+            flex-wrap: wrap;
+            gap: 6px;
+            margin-top: 12px;
+            &Item{
+                width: 140px;
+                height: 178px;
+                background: linear-gradient(0deg, rgba(240, 87, 101, 0.7) 0%, rgba(102, 50, 70, 0.14) 100%), #242C48;
+                opacity: 0.3;
+                border-radius: 12px;
             }
         }
     }
