--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -68,3 +68,95 @@
         }
     }
 }
+
+
+/* Portrait tablets and medium desktops */
+@media (min-width: 992px) and (max-width: 1199px) {
+    .footer{
+        padding: 0 20px;
+        &__contacts{
+            flex-wrap: wrap;
+            margin-top: 10px;
+            width: 500px;
+            
+        }
+        &__contact{
+            margin-top: 20px;
+        }
+    }
+}
+
+/* Portrait tablets and small desktops */
+@media (min-width: 768px) and (max-width: 991px) {
+    .footer{
+        padding: 0 20px;
+        &__title{
+            &::after{
+                width: 382px;
+                top: -50px;
+            }
+        }
+        &__contacts{
+            flex-wrap: wrap;
+            margin-top: 10px;
+            width: 450px;
+        }
+        &__contact{
+            margin-top: 20px;
+        }
+    }
+}
+/* Landscape phones and portrait tablets */
+@media (max-width: 767px) {
+    .footer{
+        padding: 0 20px;
+        &__wrapper{
+            display:block;
+        }
+        &__title{
+            font-size: 40px;
+            &::after{
+                width: 282px;
+                top: 6px;
+                left: 180px;
+            }
+        }
+        &__contacts{
+            flex-wrap: wrap;
+            margin-top: 10px;
+            width: 350px;
+            margin: 0 auto;
+        }
+        &__contact{
+            margin-top: 20px;
+            width: 100px;
+        }
+    }
+}
+/* Landscape phones and smaller */
+@media (max-width: 480px) {
+    .footer{
+        padding: 20px 20px;
+        &__wrapper{
+            display:block;
+        }
+        &__title{
+            font-size: 30px;
+            &::after{
+                width: 132px;
+                top: 0px;
+                left: 130px;
+            }
+        }
+        &__contacts{
+            flex-wrap: wrap;
+            margin-top: 10px;
+            width: 250px;
+            margin: 0 auto;
+        }
+        &__contact{
+            margin-top: 20px;
+            width: 100px;
+        }
+    }
+}
