--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,6 +1,6 @@
 .header{
-    min-width: 1345px;
-    height: 112px ;
+    max-width: 1345px;
+    height: 112px !important;
     background: #1C191B;
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.5);
     padding: 35px 25px 25px 25px;
@@ -17,6 +17,7 @@
         &__item{
             text-decoration: none;
             color: #959595;
+            align-self: center;
             &:hover{
                 color: white;
             }
@@ -55,4 +56,214 @@
         }
     }
     
+}
+.nav__mobile{
+    display: none;
+}
+.nav__mobileBtn{
+    display: none;
+}
+.logo__mobile{
+    display: none;
+}
+
+
+
+/* Portrait tablets and small desktops */
+@media (min-width: 768px) and (max-width: 991px) {
+    .header{
+        .nav{
+            max-width: 129px;
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+        }
+        .nav__item{
+            font-size: 19px;
+        }
+        
+    }
+    .authentication{
+        .log-in{
+            width: 50px;
+            height: 40px;
+            margin-right: -20px;
+        }
+        .sign-up{
+            width: 110px;
+            height: 40px;
+            font-size: 16px;
+        }
+    }
+}
+/* Landscape phones and portrait tablets */
+@media (min-width: 481px) and (max-width: 767px) {
+    .header__wrapper{
+        display: none;
+    }
+    .authentication{
+        display: none;
+    }
+    .nav__mobileBtn{
+        display: block;
+    }
+    .logo__mobile{
+        display: block;
+        position: relative;
+        z-index: 1;
+    }
+    .nav__mobileBtn{
+        background-image: url(../../assets/img/menu.png);
+        background-repeat: no-repeat;
+        cursor: pointer;
+        width: 30px;
+        height: 27.5px;
+        position: absolute;
+        right: 30px;
+        top: 40px;
+        z-index: 1;
+    }
+    .nav__mobile.nav__active{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 5px;
+        font-size: 20px;
+        background: #1C191B;
+        position: absolute;
+        width: 100%;
+        top: 10px;
+        right: 0px;
+        padding: 20px;
+        z-index: 0;
+    }
+    .nav__mobile{
+        &_nav__item{
+            text-decoration: none;
+            color: #959595;
+            &:hover{
+                color: white;
+            }
+        }
+        &_authentication{
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+            margin-top: 8px;
+        }
+        &_log-in{
+            width: 89px;
+            height: 40px;
+            color: rgba(255, 255, 255, 1);
+            background: transparent;
+            border: 1px solid rgba(255, 255, 255, 1);
+            border-radius: 100px;
+            font-size: 16px;
+            cursor: pointer;
+            &:hover{
+                border: 1px solid rgba(182, 182, 182, 1);
+                color: rgb(182, 182, 182);
+            }
+        }
+        &_sign-up{
+            width: 194px;
+            height: 40px;
+            font-size: 16px;
+            color: rgba(255, 255, 255, 1);
+            background: linear-gradient(90deg, rgba(255, 90, 58, 1) 0%, rgba(225, 35, 28, 1) 100%);
+            border: none;
+            border-radius: 100px;
+            cursor: pointer;
+            &:hover{
+                box-shadow: inset 0px 0px 15px rgba(0,0,0,0.5);
+            }
+        }
+    }
+}
+
+/* Landscape phones and smaller */
+@media (max-width: 480px) {
+    .header__wrapper{
+        display: none;
+    }
+    .authentication{
+        display: none;
+    }
+    .nav__mobileBtn{
+        display: block;
+    }
+    .logo__mobile{
+        display: block;
+        position: relative;
+        z-index: 1;
+    }
+    .nav__mobileBtn{
+        background-image: url(../../assets/img/menu.png);
+        background-repeat: no-repeat;
+        cursor: pointer;
+        width: 30px;
+        height: 27.5px;
+        position: absolute;
+        right: 30px;
+        top: 40px;
+        z-index: 1;
+    }
+    .nav__mobile.nav__active{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 5px;
+        font-size: 20px;
+        background: #1C191B;
+        position: absolute;
+        width: 100%;
+        top: 10px;
+        right: 0px;
+        padding: 20px;
+        z-index: 0;
+    }
+    .nav__mobile{
+        &_nav__item{
+            text-decoration: none;
+            color: #959595;
+            &:hover{
+                color: white;
+            }
+        }
+        &_authentication{
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+            margin-top: 8px;
+        }
+        &_log-in{
+            width: 89px;
+            height: 40px;
+            color: rgba(255, 255, 255, 1);
+            background: transparent;
+            border: 1px solid rgba(255, 255, 255, 1);
+            border-radius: 100px;
+            font-size: 16px;
+            cursor: pointer;
+            &:hover{
+                border: 1px solid rgba(182, 182, 182, 1);
+                color: rgb(182, 182, 182);
+            }
+        }
+        &_sign-up{
+            width: 194px;
+            height: 40px;
+            font-size: 16px;
+            color: rgba(255, 255, 255, 1);
+            background: linear-gradient(90deg, rgba(255, 90, 58, 1) 0%, rgba(225, 35, 28, 1) 100%);
+            border: none;
+            border-radius: 100px;
+            cursor: pointer;
+            &:hover{
+                box-shadow: inset 0px 0px 15px rgba(0,0,0,0.5);
+            }
+        }
+    }
 }
