--- a/src/pages/home/promo/Promo.scss
+++ b/src/pages/home/promo/Promo.scss
@@ -113,3 +113,69 @@
         z-index: 1;
     }
 }
+
+
+/* Portrait tablets and medium desktops */
+@media (min-width: 992px) and (max-width: 1199px) {
+    .promo{
+        &__event{
+            width: 500px;
+            &_wrapper{
+                width: 500px;
+            }
+        }
+    }
+}
+/* Portrait tablets and small desktops */
+@media (min-width: 768px) and (max-width: 991px) {
+    .promo{
+        &__event{
+            width: 350px;
+            &_wrapper{
+                width: 350px;
+            }
+        }
+    }
+}
+/* Landscape phones and portrait tablets */
+@media (max-width: 767px) {
+    .promo{
+        margin-top: 120px;
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+        &__event{
+            width: 450px;
+            &_wrapper{
+                width: 450px;
+            }
+        }
+    }
+}
+/* Landscape phones and smaller */
+@media (max-width: 480px) {
+    .promo{
+        margin-top: 130px;
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+        &__event{
+            width: 300px;
+            &_wrapper{
+                width: 300px;
+            }
+        }
+        &__newUser{
+            width: 300px;
+        }
+        &__img{
+            width: 150px;
+            height: 150px;
+            margin-top: 30px;
+            margin-left: 10px;
+        }
+        &__footer{
+            margin-top: 50px;
+        }
+    }
+}
