--- a/src/pages/home/statistic/Statistic.scss
+++ b/src/pages/home/statistic/Statistic.scss
@@ -179,7 +179,7 @@
         height: 115px;
         background: #201E20;
         border-radius: 0px 20px 20px 0px;
-        grid-area: 2 / 3 / 3 / 2;
+        grid-area: 2 / 3 / 3 / 3;
         &::before{
             content: '';
             position: absolute;
@@ -209,6 +209,146 @@
             color: #959595;
             margin-left: 20px;
             margin-top: 7px;
+        }
+    }
+}
+
+
+
+
+
+/* Portrait tablets and medium desktops */
+@media (min-width: 992px) and (max-width: 1199px) {
+    .statistic{
+        margin: 50px 0;
+        height: 400px;
+        &__time{
+            grid-area: 1 / 1 / 2 / 5;
+        }
+        &__earn{
+            grid-area: 2 / 3 / 3 / 3;
+            margin-left: 0px;
+            width: 240px;
+        }
+        &__victory{
+            grid-area: 2 / 1 / 3 / 3;
+        }
+        &__lose{
+            grid-area: 3 / 1 / 4 / 3;
+        }
+        &__exp{
+            grid-area: 3 / 3 / 4 / 5;
+        }
+    }
+
+}
+/* Portrait tablets and small desktops */
+@media (min-width: 768px) and (max-width: 991px) {
+    .statistic{
+        margin: 50px 0;
+        height: 400px;
+        &__time{
+            grid-area: 1 / 1 / 2 / 5;
+            width: 720px;
+        }
+        &__earn{
+            grid-area: 2 / 3 / 3 / 3;
+            margin-left: 0px;
+            width: 240px;
+        }
+        &__victory{
+            grid-area: 2 / 1 / 3 / 3;
+        }
+        &__lose{
+            grid-area: 3 / 1 / 4 / 3;
+        }
+        &__exp{
+            grid-area: 3 / 3 / 4 / 5;
+        }
+    }
+}
+/* Landscape phones and portrait tablets */
+@media (max-width: 767px) {
+    .statistic{
+        width: 482px;
+        margin: 50px 0;
+        height: 400px;
+        gap: 15px;
+        &__time{
+            grid-area: 1 / 1 / 2 / 5;
+            width: 430px;
+            &Count{
+                font-size: 20px;
+            }
+        }
+        &__earn{
+            grid-area: 2 / 3 / 3 / 3;
+            margin-left: 0px;
+            width: 200px;
+            margin-left: 150px;
+        }
+        &__victory{
+            grid-area: 2 / 1 / 3 / 3;
+            width: 200px;
+        }
+        &__lose{
+            grid-area: 3 / 1 / 4 / 3;
+            width: 200px;
+        }
+        &__exp{
+            grid-area: 3 / 3 / 4 / 5;
+            width: 200px;
+            margin-left: 150px;
+        }
+    }
+}
+/* Landscape phones and smaller */
+@media (max-width: 480px) {
+    .statistic{
+        width: 480px;
+        margin: 50px 0;
+        height: 400px;
+        gap: 15px;
+        &__time{
+            grid-area: 1 / 1 / 2 / 5;
+            width: 310px;
+            &Graphic{
+                margin-left: 10px;
+            }
+            &Count{
+                font-size: 20px;
+            }
+        }
+        &__earn{
+            grid-area: 2 / 3 / 3 / 3;
+            margin-left: 0px;
+            width: 140px;
+            margin-left: 10px;
+            &Sum{
+                font-size: 20px;
+            }
+        }
+        &__victory{
+            grid-area: 2 / 1 / 3 / 3;
+            width: 140px;
+            &Descr{
+                font-size: 12px;
+            }
+        }
+        &__lose{
+            grid-area: 3 / 1 / 4 / 3;
+            width: 140px;
+            &Descr{
+                font-size: 12px;
+            }
+        }
+        &__exp{
+            grid-area: 3 / 3 / 4 / 5;
+            width: 140px;
+            margin-left: 10px;
+            &Sum{
+                font-size: 20px;
+            }
         }
     }
 }
